Gerði nýan classa og kendi honum að lesa og skrifa sig

--- a/Pizzastadur/pizzastadur.cbp
+++ b/Pizzastadur/pizzastadur.cbp
@@ -34,6 +34,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="ItemDataBase.cpp" />
+		<Unit filename="ItemDataBase.h" />
 		<Unit filename="include/Pizza.h" />
 		<Unit filename="include/Pizzasdadur.h" />
 		<Unit filename="include/Pontun.h" />
