--- a/Pizzastadur/pizzastadur.cbp
+++ b/Pizzastadur/pizzastadur.cbp
@@ -14,6 +14,7 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="include" />
+					<Add directory="include/Models" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -24,6 +25,7 @@
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="include" />
+					<Add directory="include/Models" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -36,6 +38,7 @@
 		</Compiler>
 		<Unit filename="ItemDataBase.cpp" />
 		<Unit filename="ItemDataBase.h" />
+		<Unit filename="include/Models/Toppings.h" />
 		<Unit filename="include/Pizza.h" />
 		<Unit filename="include/Pizzasdadur.h" />
 		<Unit filename="include/Pontun.h" />
@@ -43,6 +46,7 @@
 		<Unit filename="src/Pizza.cpp" />
 		<Unit filename="src/Pizzasdadur.cpp" />
 		<Unit filename="src/Pontun.cpp" />
+		<Unit filename="src/models/Toppings.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
