Lagaði villur og gerði repo fyrir pantanir

--- a/Pizzastadur/pizzastadur.cbp
+++ b/Pizzastadur/pizzastadur.cbp
@@ -15,6 +15,8 @@
 					<Add option="-g" />
 					<Add directory="include" />
 					<Add directory="include/Models" />
+					<Add directory="include/Services" />
+					<Add directory="include/repo" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -26,6 +28,8 @@
 					<Add option="-O2" />
 					<Add directory="include" />
 					<Add directory="include/Models" />
+					<Add directory="include/Services" />
+					<Add directory="include/repo" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -42,12 +46,15 @@
 		<Unit filename="include/Models/Pontun.h" />
 		<Unit filename="include/Models/Toppings.h" />
 		<Unit filename="include/Pizzasdadur.h" />
+		<Unit filename="include/Services/staffServices.h" />
 		<Unit filename="include/UI/AdminUI.h" />
 		<Unit filename="include/UI/BakerUI.h" />
 		<Unit filename="include/UI/SalesUI.h" />
 		<Unit filename="include/UI/StaffUI.h" />
+		<Unit filename="include/repo/orderRepo.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Pizzasdadur.cpp" />
+		<Unit filename="src/Services/staffServices.cpp" />
 		<Unit filename="src/UI/AdminUI.cpp" />
 		<Unit filename="src/UI/BakerUI.cpp" />
 		<Unit filename="src/UI/SalesUI.cpp" />
@@ -55,6 +62,7 @@
 		<Unit filename="src/models/Pizza.cpp" />
 		<Unit filename="src/models/Pontun.cpp" />
 		<Unit filename="src/models/Toppings.cpp" />
+		<Unit filename="src/repo/orderRepo.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
