Gerði BakerServices og breytti Pizzastadur smá

--- a/Pizzastadur/pizzastadur.cbp
+++ b/Pizzastadur/pizzastadur.cbp
@@ -17,6 +17,7 @@
 					<Add directory="include/Models" />
 					<Add directory="include/Services" />
 					<Add directory="include/repo" />
+					<Add directory="include/UI" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -39,7 +40,6 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
-			<Add directory="include/UI" />
 		</Compiler>
 		<Unit filename="ItemDataBase.cpp" />
 		<Unit filename="ItemDataBase.h" />
@@ -47,6 +47,7 @@
 		<Unit filename="include/Models/Pontun.h" />
 		<Unit filename="include/Models/Toppings.h" />
 		<Unit filename="include/Pizzasdadur.h" />
+		<Unit filename="include/Services/BakerServices.h" />
 		<Unit filename="include/Services/staffServices.h" />
 		<Unit filename="include/UI/AdminUI.h" />
 		<Unit filename="include/UI/BakerUI.h" />
@@ -55,6 +56,7 @@
 		<Unit filename="include/repo/orderRepo.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Pizzasdadur.cpp" />
+		<Unit filename="src/Services/BakerServices.cpp" />
 		<Unit filename="src/Services/staffServices.cpp" />
 		<Unit filename="src/UI/AdminUI.cpp" />
 		<Unit filename="src/UI/BakerUI.cpp" />
