--- a/Pizzastadur/pizzastadur.cbp
+++ b/Pizzastadur/pizzastadur.cbp
@@ -51,7 +51,6 @@
 		<Unit filename="include/Enums.h" />
 		<Unit filename="include/Exceptions/OrderExeptions.h" />
 		<Unit filename="include/Exceptions/PizzaExeptions.h" />
-		<Unit filename="include/Exeptions/OrderExeptions.h" />
 		<Unit filename="include/Models/Pizza.h" />
 		<Unit filename="include/Models/Pontun.h" />
 		<Unit filename="include/Models/Toppings.h" />
@@ -63,6 +62,7 @@
 		<Unit filename="include/UI/BakerUI.h" />
 		<Unit filename="include/UI/SalesUI.h" />
 		<Unit filename="include/UI/StaffUI.h" />
+		<Unit filename="include/repo/ToppingsRepo.h" />
 		<Unit filename="include/repo/orderRepo.h" />
 		<Unit filename="include/repo/pizzaRepo.h" />
 		<Unit filename="main.cpp" />
@@ -80,6 +80,7 @@
 		<Unit filename="src/models/Pizza.cpp" />
 		<Unit filename="src/models/Pontun.cpp" />
 		<Unit filename="src/models/Toppings.cpp" />
+		<Unit filename="src/repo/ToppingsRepo.cpp" />
 		<Unit filename="src/repo/orderRepo.cpp" />
 		<Unit filename="src/repo/pizzaRepo.cpp" />
 		<Extensions>
