--- a/Pizzastadur/pizzastadur.cbp
+++ b/Pizzastadur/pizzastadur.cbp
@@ -55,6 +55,7 @@
 		<Unit filename="include/Models/DeliveryPlaces.h" />
 		<Unit filename="include/Models/Pizza.h" />
 		<Unit filename="include/Models/Pontun.h" />
+		<Unit filename="include/Models/Products.h" />
 		<Unit filename="include/Models/Toppings.h" />
 		<Unit filename="include/Pizzasdadur.h" />
 		<Unit filename="include/Services/AdminServices.h" />
@@ -66,6 +67,7 @@
 		<Unit filename="include/UI/SalesUI.h" />
 		<Unit filename="include/UI/StaffUI.h" />
 		<Unit filename="include/repo/PlacesRepo.h" />
+		<Unit filename="include/repo/ProductRepo.h" />
 		<Unit filename="include/repo/ToppingsRepo.h" />
 		<Unit filename="include/repo/orderRepo.h" />
 		<Unit filename="include/repo/pizzaRepo.h" />
@@ -85,8 +87,10 @@
 		<Unit filename="src/models/DeliveryPlaces.cpp" />
 		<Unit filename="src/models/Pizza.cpp" />
 		<Unit filename="src/models/Pontun.cpp" />
+		<Unit filename="src/models/Products.cpp" />
 		<Unit filename="src/models/Toppings.cpp" />
 		<Unit filename="src/repo/PlacesRepo.cpp" />
+		<Unit filename="src/repo/ProductRepo.cpp" />
 		<Unit filename="src/repo/ToppingsRepo.cpp" />
 		<Unit filename="src/repo/orderRepo.cpp" />
 		<Unit filename="src/repo/pizzaRepo.cpp" />
