--- a/Pizzastadur/pizzastadur.cbp
+++ b/Pizzastadur/pizzastadur.cbp
@@ -64,6 +64,7 @@
 		<Unit filename="include/UI/BakerUI.h" />
 		<Unit filename="include/UI/SalesUI.h" />
 		<Unit filename="include/UI/StaffUI.h" />
+		<Unit filename="include/repo/PizzaMenuRepo.h" />
 		<Unit filename="include/repo/PlacesRepo.h" />
 		<Unit filename="include/repo/ProductRepo.h" />
 		<Unit filename="include/repo/ToppingMenuRepo.h" />
@@ -86,6 +87,7 @@
 		<Unit filename="src/models/Products.cpp" />
 		<Unit filename="src/models/Toppings.cpp" />
 		<Unit filename="src/models/ToppingsMenuItem.cpp" />
+		<Unit filename="src/repo/PizzaMenuRepo.cpp" />
 		<Unit filename="src/repo/PlacesRepo.cpp" />
 		<Unit filename="src/repo/ProductRepo.cpp" />
 		<Unit filename="src/repo/ToppingMenuRepo.cpp" />
