--- a/Pizzastadur/pizzastadur.cbp
+++ b/Pizzastadur/pizzastadur.cbp
@@ -56,6 +56,7 @@
 		<Unit filename="include/Models/Products.h" />
 		<Unit filename="include/Models/Toppings.h" />
 		<Unit filename="include/Models/ToppingsMenuItem.h" />
+		<Unit filename="include/Models/productOnFile.h" />
 		<Unit filename="include/Services/AdminServices.h" />
 		<Unit filename="include/Services/BakerServices.h" />
 		<Unit filename="include/Services/SalesServices.h" />
@@ -66,6 +67,7 @@
 		<Unit filename="include/UI/StaffUI.h" />
 		<Unit filename="include/repo/PizzaMenuRepo.h" />
 		<Unit filename="include/repo/PlacesRepo.h" />
+		<Unit filename="include/repo/ProductOnFileRepo.h" />
 		<Unit filename="include/repo/ProductRepo.h" />
 		<Unit filename="include/repo/ToppingMenuRepo.h" />
 		<Unit filename="include/repo/ToppingsRepo.h" />
@@ -87,8 +89,10 @@
 		<Unit filename="src/models/Products.cpp" />
 		<Unit filename="src/models/Toppings.cpp" />
 		<Unit filename="src/models/ToppingsMenuItem.cpp" />
+		<Unit filename="src/models/productOnFile.cpp" />
 		<Unit filename="src/repo/PizzaMenuRepo.cpp" />
 		<Unit filename="src/repo/PlacesRepo.cpp" />
+		<Unit filename="src/repo/ProductOnFileRepo.cpp" />
 		<Unit filename="src/repo/ProductRepo.cpp" />
 		<Unit filename="src/repo/ToppingMenuRepo.cpp" />
 		<Unit filename="src/repo/orderRepo.cpp" />
